# python_scraping

./: .gitignore  Makefile  README.md  pyproject.toml  scrape.sh  scraping.sh
.docker/: Dockerfile
python_scraping/: cli.py  get_image_links_new.py
